--- a/app/src/main/res/layout/recycler_items.xml
+++ b/app/src/main/res/layout/recycler_items.xml
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/train_icon"
             android:background="#FFFFFFFF"
-            android:src="@drawable/train10"/>
+            android:src="@drawable/side_train10"/>
         <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
