--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,79 +4,82 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ADD8E6"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
 
     <LinearLayout
         android:id="@+id/slide"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
         android:orientation="horizontal">
 
         <ImageButton
             android:id="@+id/Menubtn"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
             android:adjustViewBounds="true"
-            android:layout_marginTop="15dp"
-            android:layout_marginLeft="15dp"
-            app:srcCompat="@drawable/ic_menu64"
-            android:layout_gravity="center" />
+            app:srcCompat="@drawable/ic_menu64" />
 
         <ImageButton
             android:id="@+id/btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:layout_marginLeft="250dp"
-            android:src="@drawable/replayarrow32"
-            android:background="@color/colorWhite"/>
+            android:layout_marginLeft="300dp"
+            android:layout_marginTop="35dp"
+            android:background="@color/colorWhite"
+            android:src="@drawable/replayarrow32" />
 
     </LinearLayout>
 
 
-        <TextView
-            android:id="@+id/mainviewtext"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="10dp"
-            android:textSize="50dp"
-            android:text="새로고침을 눌러보세요"
-            android:background="@drawable/border"
-            android:fontFamily="@font/nanumbarungothicbold"/>
+    <TextView
+        android:id="@+id/mainviewtext"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="20dp"
+        android:background="@drawable/border"
+        android:fontFamily="@font/nanumbarungothicbold"
+        android:text="새로고침을 눌러보세요"
+        android:textSize="40dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="60dp"
+        android:fontFamily="@font/nanumbarungothicbold"
         android:text="쾌적도"
-        android:textSize="30dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="10dp"
-        android:fontFamily="@font/nanumbarungothicbold"/>
+        android:textSize="30dp" />
 
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/vertical_list"
-        android:layout_width="match_parent"
-        android:layout_height="203dp"
-        android:layout_marginTop="10dp"/>
+        android:layout_width="380dp"
+        android:layout_height="160dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="20dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="노약자석"
-        android:textSize="30dp"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="5dp"
-        android:layout_marginLeft="10dp"
-        android:fontFamily="@font/nanumbarungothicbold"/>
+        android:fontFamily="@font/nanumbarungothicbold"
+        android:text="노약자석"
+        android:textSize="30dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/vertical_list2"
-        android:layout_width="match_parent"
-        android:layout_height="203dp"
-        android:layout_marginTop="10dp"/>
+        android:layout_width="380dp"
+        android:layout_height="200dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="20dp" />
 
 </LinearLayout>
