--- a/app/src/main/res/layout/popup_activity.xml
+++ b/app/src/main/res/layout/popup_activity.xml
@@ -3,23 +3,87 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ListView
-        android:id="@+id/popuptoplist"
-        android:layout_width="150dp"
-        android:layout_height="match_parent"
+    <ImageButton
+        android:id="@+id/stayline1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_row="1"
         android:layout_column="1"
-        android:background="#ffffff">
+        >
+    </ImageButton>
 
-    </ListView>
+    <ImageButton
+        android:id="@+id/stayline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_row="2"
+        android:layout_column="1"></ImageButton>
+    <ImageButton
+        android:id="@+id/stayline3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_row="3"
+        android:layout_column="1"
+        >
+    </ImageButton>
+    <ImageButton
+        android:id="@+id/stayline4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_row="4"
+        android:layout_column="1"
+        >
+    </ImageButton>
+
+    <ImageButton
+        android:id="@+id/stayline5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_row="5"
+        android:layout_column="1"
+        >
+    </ImageButton>
+    <ImageButton
+        android:id="@+id/stayline6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_row="6"
+        android:layout_column="1"
+        >
+    </ImageButton>
+    <ImageButton
+        android:id="@+id/stayline7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_row="7"
+        android:layout_column="1"
+        >
+    </ImageButton>
+
+    <ImageButton
+        android:id="@+id/stayline8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_row="8"
+        android:layout_column="1"
+        >
+    </ImageButton>
+    <ImageButton
+        android:id="@+id/stayline9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_row="9"
+        android:layout_column="1"
+        >
+    </ImageButton>
+
 
     <ListView
-        android:id="@+id/popupbotlist"
+        android:id="@+id/popuplist"
         android:layout_width="150dp"
         android:layout_height="match_parent"
         android:layout_row="1"
         android:layout_column="2"
-        android:background="#0000ff"
         >
 
     </ListView>
