--- a/app/src/main/res/layout/popup_items.xml
+++ b/app/src/main/res/layout/popup_items.xml
@@ -10,10 +10,14 @@
         android:layout_margin="8dp"
         android:background="#eaeaea">
 
-        <Button
-            android:layout_width="80dp"
-            android:layout_height="40dp"
-            android:background="#0000FF">
-        </Button>
+        <TextView
+            android:id="@+id/itemss1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"></TextView>
+
+        <TextView
+            android:id="@+id/itemss2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"></TextView>
     </RelativeLayout>
 </LinearLayout>
