--- a/app/src/main/res/layout/popup_activity.xml
+++ b/app/src/main/res/layout/popup_activity.xml
@@ -1,79 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@android:color/background_light"
+    >
 
     <ImageButton
         android:id="@+id/stayline1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="216dp"
+        android:layout_height="60dp"
         android:layout_row="1"
         android:layout_column="1"
+        android:src="@drawable/liness1"
         >
     </ImageButton>
 
     <ImageButton
         android:id="@+id/stayline2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="216dp"
+        android:layout_height="60dp"
         android:layout_row="2"
-        android:layout_column="1"></ImageButton>
+        android:layout_column="1"
+        android:src="@drawable/lines2"
+        ></ImageButton>
     <ImageButton
         android:id="@+id/stayline3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="216dp"
+        android:layout_height="60dp"
         android:layout_row="3"
         android:layout_column="1"
+        android:src="@drawable/lines3"
         >
     </ImageButton>
     <ImageButton
         android:id="@+id/stayline4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="216dp"
+        android:layout_height="60dp"
         android:layout_row="4"
         android:layout_column="1"
+        android:src="@drawable/lines4"
         >
     </ImageButton>
 
     <ImageButton
         android:id="@+id/stayline5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="216dp"
+        android:layout_height="60dp"
         android:layout_row="5"
         android:layout_column="1"
+        android:src="@drawable/lines5"
         >
     </ImageButton>
     <ImageButton
         android:id="@+id/stayline6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="216dp"
+        android:layout_height="60dp"
         android:layout_row="6"
         android:layout_column="1"
+        android:src="@drawable/lines6"
         >
     </ImageButton>
     <ImageButton
         android:id="@+id/stayline7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="216dp"
+        android:layout_height="60dp"
         android:layout_row="7"
         android:layout_column="1"
+        android:src="@drawable/lines7"
         >
     </ImageButton>
 
     <ImageButton
         android:id="@+id/stayline8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="216dp"
+        android:layout_height="60dp"
         android:layout_row="8"
         android:layout_column="1"
+        android:src="@drawable/lines8"
         >
     </ImageButton>
     <ImageButton
         android:id="@+id/stayline9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="216dp"
+        android:layout_height="60dp"
         android:layout_row="9"
         android:layout_column="1"
+        android:src="@drawable/lines9"
         >
     </ImageButton>
 
