텍스트뷰 가운데정렬
텍스트뷰 가운데정렬

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,7 @@
 
     <TextView
         android:id="@+id/mainviewtext"
+        android:gravity="center_horizontal"
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:layout_marginLeft="20dp"
