--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,8 @@
     <LinearLayout
         android:id="@+id/slide"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="60dp"
+        android:background="@drawable/top_layout_border"
         android:orientation="horizontal">
 
         <ImageButton
@@ -20,19 +21,28 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginLeft="15dp"
             android:adjustViewBounds="true"
-            android:background="#DAE7EC"
+            android:background="#03A9F4"
             app:srcCompat="@drawable/ic_menu64" />
+
+        <TextView
+            android:layout_width="300dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="20dp"
+            android:gravity="center_horizontal"
+            android:fontFamily="@font/nanumbarungothicbold"
+            android:text="지하철 정보"
+            android:textSize="25dp"
+            android:textColor="#000000"/>
 
         <ImageButton
             android:id="@+id/btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="300dp"
-            android:layout_marginTop="35dp"
-            android:background="#DAE7EC"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="15dp"
+            android:background="#03A9F4"
             android:src="@drawable/replayarrow32" />
 
     </LinearLayout>
@@ -63,9 +73,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/vertical_list"
         android:layout_width="380dp"
-        android:layout_height="160dp"
+        android:layout_height="130dp"
         android:layout_marginLeft="15dp"
-        android:layout_marginTop="20dp" />
+        android:layout_marginTop="15dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -79,8 +89,17 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/vertical_list2"
         android:layout_width="380dp"
-        android:layout_height="200dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="20dp" />
+        android:layout_height="130dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="15dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp"
+        android:background="#03A9F4">
+
+
+    </LinearLayout>
 
 </LinearLayout>
