--- a/app/src/main/res/layout/popup_items.xml
+++ b/app/src/main/res/layout/popup_items.xml
@@ -10,14 +10,24 @@
         android:layout_margin="8dp"
         android:background="#eaeaea">
 
-        <TextView
-            android:id="@+id/itemss1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"></TextView>
-
-        <TextView
-            android:id="@+id/itemss2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"></TextView>
     </RelativeLayout>
+    <TextView
+        android:id="@+id/itemss1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/nanumbarungothicbold"
+        android:gravity="center_horizontal"
+        android:textSize="25dp"
+        android:layout_marginRight="5dp"
+        android:textColor="#000000"></TextView>
+    <TextView
+        android:id="@+id/itemss2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/nanumbarungothicbold"
+        android:gravity="center_horizontal"
+        android:textSize="25dp"
+        android:textColor="#000000"></TextView>
+
+
 </LinearLayout>
