--- a/app/src/main/res/layout/popup_activity.xml
+++ b/app/src/main/res/layout/popup_activity.xml
@@ -88,6 +88,16 @@
         android:src="@drawable/lines9"
         >
     </ImageButton>
+
+    <ImageButton
+        android:id="@+id/stayline10"
+        android:layout_width="216dp"
+        android:layout_height="60dp"
+        android:layout_row="9"
+        android:layout_column="1"
+        android:src="@drawable/lines9"
+        >
+    </ImageButton>
 </GridLayout>
 
     <ListView
