--- a/app/src/main/res/layout/loading_activity.xml
+++ b/app/src/main/res/layout/loading_activity.xml
@@ -1,25 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center_vertical"
+    android:orientation="horizontal"
+    android:gravity="center"
     android:background="#FFFFFF">
 
-    <ImageView
-        android:id="@+id/loading"
-        android:layout_width="250dp"
-        android:layout_height="300dp"
-        android:layout_marginTop="150dp"
-        android:layout_gravity="center_horizontal"
-        android:src="@mipmap/ic_launcher_hacheol"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:fontFamily="@font/nanumbarungothicbold"
-        android:gravity="center_horizontal"
-        android:text="하철2"
-        android:textColor="#000000"
-        android:textSize="50dp" />
+                <ImageView
+                android:id="@+id/loading"
+                android:layout_width="250dp"
+                android:layout_height="300dp"
+                android:src="@mipmap/ic_launcher_hacheol"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:fontFamily="@font/nanumbarungothicbold"
+                    android:text="하철2"
+                    android:textColor="#000000"
+                    android:textSize="50dp" />
+
+
+        </LinearLayout>
+
+
 
 </LinearLayout>
