--- a/app/src/main/res/layout/statistics_activity.xml
+++ b/app/src/main/res/layout/statistics_activity.xml
@@ -1,47 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <ImageButton
-        android:id="@+id/Menubtn"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:adjustViewBounds="true"
-        android:layout_marginTop="1dp"
-        android:layout_marginLeft="1dp"
-        android:src="@drawable/ic_menu64"
-        android:layout_gravity="center" />
+    android:background="#FFFFFF"
+    android:orientation="vertical"
+    tools:context=".MainActivity">
+
+    <LinearLayout
+        android:id="@+id/slide"
+        android:layout_width="match_parent"
+        android:layout_height="0px"
+        android:background="@drawable/top_layout_border"
+        android:orientation="horizontal"
+        android:layout_weight="1">
+
+
+        <ImageButton
+            android:id="@+id/Menubtn"
+            android:layout_width="0px"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:adjustViewBounds="true"
+            android:background="#7BD6F8"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/ic_menu64"/>
+
+        <TextView
+            android:layout_width="0px"
+            android:layout_height="match_parent"
+            android:fontFamily="@font/nanumbarungothicbold"
+            android:gravity="center"
+            android:text="통계 정보"
+            android:textColor="#000000"
+            android:textSize="25dp"
+            android:layout_weight="5"/>
+
+        <ImageButton
+            android:id="@+id/btn"
+            android:layout_width="0px"
+            android:layout_height="match_parent"
+            android:background="#7BD6F8"
+            android:src="@drawable/replayarrow32"
+            android:layout_weight="1" />
+
+
+
+    </LinearLayout>
+
+
 
     <androidx.appcompat.widget.AppCompatSpinner
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0px"
         android:layout_above="@+id/chart"
-        android:layout_marginBottom="69dp">
+        android:layout_weight="2.25">
     </androidx.appcompat.widget.AppCompatSpinner>
 
     <com.rey.material.widget.Spinner
         style="@style/Material.Widget.Spinner"
-        android:layout_marginLeft="220dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="0px"
         android:layout_above="@+id/lazyDatePicker"
-        app:rd_style="@style/Material.Drawable.Ripple.Wave"/>
+        app:rd_style="@style/Material.Drawable.Ripple.Wave"
+        android:layout_weight="2.25"/>
 
 
     <com.mikhaellopez.lazydatepicker.LazyDatePicker
         android:id="@+id/lazyDatePicker"
         android:layout_above="@+id/chart"
         android:layout_marginLeft="5dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:ldp_date_format="mm-dd-yyyy" />
+        android:layout_width="match_parent"
+        android:layout_height="0px"
+        app:ldp_date_format="mm-dd-yyyy"
+        android:layout_weight="2.25" />
 
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/chart"
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
-        android:layout_height="500dp"/>
+        android:layout_height="0px"
+        android:layout_weight="2.25"/>
 
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0px"
+        android:layout_weight="0.8">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fontFamily="@font/nanumbarungothicbold"
+            android:gravity="center"
+            android:text="Hacheol2   ver1.0.     Made by. u_ri_Oh."
+            android:textColor="#000000"
+            android:textSize="15dp" />
+
+    </LinearLayout>
+
+
+
+</LinearLayout>
