--- a/app/src/main/res/layout/statistics_activity.xml
+++ b/app/src/main/res/layout/statistics_activity.xml
@@ -58,23 +58,29 @@
         android:layout_weight="2.25">
     </androidx.appcompat.widget.AppCompatSpinner>
 
-    <com.rey.material.widget.Spinner
-        style="@style/Material.Widget.Spinner"
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0px"
-        android:layout_above="@+id/lazyDatePicker"
-        app:rd_style="@style/Material.Drawable.Ripple.Wave"
-        android:layout_weight="2.25"/>
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/Dateset"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="30dp"
+            android:text="0000-00-00"/>
+
+        <Button
+            android:id="@+id/Datebtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="25dp"
+            android:text="날짜 변경"/>
 
 
-    <com.mikhaellopez.lazydatepicker.LazyDatePicker
-        android:id="@+id/lazyDatePicker"
-        android:layout_above="@+id/chart"
-        android:layout_width="match_parent"
-        android:layout_height="0px"
-        android:gravity="center"
-        app:ldp_date_format="mm-dd-yyyy"
-        android:layout_weight="0.5" />
+
+    </LinearLayout>
 
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/chart"
