--- a/app/src/main/res/layout/popup_activity.xml
+++ b/app/src/main/res/layout/popup_activity.xml
@@ -4,105 +4,93 @@
     android:layout_height="match_parent"
     android:background="@android:color/background_light"
     >
-<GridLayout>
-    <ImageButton
-        android:id="@+id/stayline1"
-        android:layout_width="216dp"
-        android:layout_height="60dp"
-        android:layout_row="1"
-        android:layout_column="1"
-        android:src="@drawable/liness1"
-        >
-    </ImageButton>
 
-    <ImageButton
-        android:id="@+id/stayline2"
-        android:layout_width="216dp"
-        android:layout_height="60dp"
-        android:layout_row="2"
-        android:layout_column="1"
-        android:src="@drawable/lines2"
-        ></ImageButton>
-    <ImageButton
-        android:id="@+id/stayline3"
-        android:layout_width="216dp"
-        android:layout_height="60dp"
-        android:layout_row="3"
-        android:layout_column="1"
-        android:src="@drawable/lines3"
-        >
-    </ImageButton>
-    <ImageButton
-        android:id="@+id/stayline4"
-        android:layout_width="216dp"
-        android:layout_height="60dp"
-        android:layout_row="4"
-        android:layout_column="1"
-        android:src="@drawable/lines4"
-        >
-    </ImageButton>
+    <GridLayout android:layout_width="178dp">
 
-    <ImageButton
-        android:id="@+id/stayline5"
-        android:layout_width="216dp"
-        android:layout_height="60dp"
-        android:layout_row="5"
-        android:layout_column="1"
-        android:src="@drawable/lines5"
-        >
-    </ImageButton>
-    <ImageButton
-        android:id="@+id/stayline6"
-        android:layout_width="216dp"
-        android:layout_height="60dp"
-        android:layout_row="6"
-        android:layout_column="1"
-        android:src="@drawable/lines6"
-        >
-    </ImageButton>
-    <ImageButton
-        android:id="@+id/stayline7"
-        android:layout_width="216dp"
-        android:layout_height="60dp"
-        android:layout_row="7"
-        android:layout_column="1"
-        android:src="@drawable/lines7"
-        >
-    </ImageButton>
+        <ImageButton
+            android:id="@+id/stayline1"
+            android:layout_width="216dp"
+            android:layout_height="60dp"
+            android:layout_row="1"
+            android:layout_column="1"
+            android:src="@drawable/liness1"></ImageButton>
 
-    <ImageButton
-        android:id="@+id/stayline8"
-        android:layout_width="216dp"
-        android:layout_height="60dp"
-        android:layout_row="8"
-        android:layout_column="1"
-        android:src="@drawable/lines8"
-        >
-    </ImageButton>
-    <ImageButton
-        android:id="@+id/stayline9"
-        android:layout_width="216dp"
-        android:layout_height="60dp"
-        android:layout_row="9"
-        android:layout_column="1"
-        android:src="@drawable/lines9"
-        >
-    </ImageButton>
+        <ImageButton
+            android:id="@+id/stayline2"
+            android:layout_width="216dp"
+            android:layout_height="60dp"
+            android:layout_row="2"
+            android:layout_column="1"
+            android:src="@drawable/lines2"></ImageButton>
 
-    <ImageButton
-        android:id="@+id/stayline10"
-        android:layout_width="216dp"
-        android:layout_height="60dp"
-        android:layout_row="10"
-        android:layout_column="1"
-        android:src="@drawable/liness1"
-        >
-    </ImageButton>
-</GridLayout>
+        <ImageButton
+            android:id="@+id/stayline3"
+            android:layout_width="216dp"
+            android:layout_height="60dp"
+            android:layout_row="3"
+            android:layout_column="1"
+            android:src="@drawable/lines3"></ImageButton>
+
+        <ImageButton
+            android:id="@+id/stayline4"
+            android:layout_width="216dp"
+            android:layout_height="60dp"
+            android:layout_row="4"
+            android:layout_column="1"
+            android:src="@drawable/lines4"></ImageButton>
+
+        <ImageButton
+            android:id="@+id/stayline5"
+            android:layout_width="216dp"
+            android:layout_height="60dp"
+            android:layout_row="5"
+            android:layout_column="1"
+            android:src="@drawable/lines5"></ImageButton>
+
+        <ImageButton
+            android:id="@+id/stayline6"
+            android:layout_width="216dp"
+            android:layout_height="60dp"
+            android:layout_row="6"
+            android:layout_column="1"
+            android:src="@drawable/lines6"></ImageButton>
+
+        <ImageButton
+            android:id="@+id/stayline7"
+            android:layout_width="216dp"
+            android:layout_height="60dp"
+            android:layout_row="7"
+            android:layout_column="1"
+            android:src="@drawable/lines7"></ImageButton>
+
+        <ImageButton
+            android:id="@+id/stayline8"
+            android:layout_width="216dp"
+            android:layout_height="60dp"
+            android:layout_row="8"
+            android:layout_column="1"
+            android:src="@drawable/lines8"></ImageButton>
+
+        <ImageButton
+            android:id="@+id/stayline9"
+            android:layout_width="216dp"
+            android:layout_height="60dp"
+            android:layout_row="9"
+            android:layout_column="1"
+            android:src="@drawable/lines9"></ImageButton>
+
+        <ImageButton
+            android:id="@+id/stayline10"
+            android:layout_width="216dp"
+            android:layout_height="60dp"
+            android:layout_row="10"
+            android:layout_column="1"
+            android:src="@drawable/liness1"></ImageButton>
+    </GridLayout>
 
     <ListView
         android:id="@+id/popuplist"
-        android:layout_width="199dp"
+        android:layout_width="233dp"
         android:layout_height="match_parent"
         android:layout_row="0"
         android:layout_column="1">
