--- a/app/src/main/res/layout/popup_items.xml
+++ b/app/src/main/res/layout/popup_items.xml
@@ -28,6 +28,17 @@
         android:gravity="center_horizontal"
         android:textSize="25dp"
         android:textColor="#000000"></TextView>
-
-
+    <ImageView
+        android:id="@+id/itemss3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        ></ImageView>
+    <TextView
+        android:id="@+id/itemss4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/nanumbarungothicbold"
+        android:gravity="center_horizontal"
+        android:textSize="25dp"
+        android:textColor="#000000"></TextView>
 </LinearLayout>
