--- a/app/src/main/res/layout/popup_activity.xml
+++ b/app/src/main/res/layout/popup_activity.xml
@@ -1,99 +1,144 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/background_light"
-    >
+    android:background="@android:color/background_light">
 
-    <GridLayout android:layout_width="178dp">
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="0px"
+        android:layout_height="match_parent"
+        android:layout_weight="1">
 
-        <ImageButton
+        <Button
             android:id="@+id/stayline1"
-            android:layout_width="216dp"
-            android:layout_height="60dp"
+            android:layout_width="match_parent"
+            android:layout_height="0px"
+            android:layout_weight="1"
             android:layout_row="1"
             android:layout_column="1"
-            android:src="@drawable/liness1"></ImageButton>
+            android:background="#FFFFFF"
+            android:fontFamily="@font/nanumbarungothicbold"
+            android:text="서울 1호선"
+            android:textSize="20dp"></Button>
 
-        <ImageButton
+        <Button
             android:id="@+id/stayline2"
-            android:layout_width="216dp"
-            android:layout_height="60dp"
+            android:layout_width="match_parent"
+            android:layout_height="0px"
+            android:layout_weight="1"
             android:layout_row="2"
             android:layout_column="1"
-            android:src="@drawable/lines2"></ImageButton>
+            android:background="#FFFFFF"
+            android:fontFamily="@font/nanumbarungothicbold"
+            android:text="서울 2호선"
+            android:textSize="20dp"></Button>
 
-        <ImageButton
+        <Button
             android:id="@+id/stayline3"
-            android:layout_width="216dp"
-            android:layout_height="60dp"
+            android:layout_width="match_parent"
+            android:layout_height="0px"
+            android:layout_weight="1"
             android:layout_row="3"
             android:layout_column="1"
-            android:src="@drawable/lines3"></ImageButton>
+            android:background="#FFFFFF"
+            android:fontFamily="@font/nanumbarungothicbold"
+            android:text="서울 3호선"
+            android:textSize="20dp"></Button>
 
-        <ImageButton
+        <Button
             android:id="@+id/stayline4"
-            android:layout_width="216dp"
-            android:layout_height="60dp"
+            android:layout_width="match_parent"
+            android:layout_height="0px"
+            android:layout_weight="1"
             android:layout_row="4"
             android:layout_column="1"
-            android:src="@drawable/lines4"></ImageButton>
+            android:background="#FFFFFF"
+            android:fontFamily="@font/nanumbarungothicbold"
+            android:text="서울 4호선"
+            android:textSize="20dp"></Button>
 
-        <ImageButton
+        <Button
             android:id="@+id/stayline5"
-            android:layout_width="216dp"
-            android:layout_height="60dp"
+            android:layout_width="match_parent"
+            android:layout_height="0px"
+            android:layout_weight="1"
             android:layout_row="5"
             android:layout_column="1"
-            android:src="@drawable/lines5"></ImageButton>
+            android:background="#FFFFFF"
+            android:fontFamily="@font/nanumbarungothicbold"
+            android:text="서울 5호선"
+            android:textSize="20dp"></Button>
 
-        <ImageButton
+        <Button
             android:id="@+id/stayline6"
-            android:layout_width="216dp"
-            android:layout_height="60dp"
+            android:layout_width="match_parent"
+            android:layout_height="0px"
+            android:layout_weight="1"
             android:layout_row="6"
             android:layout_column="1"
-            android:src="@drawable/lines6"></ImageButton>
+            android:background="#FFFFFF"
+            android:fontFamily="@font/nanumbarungothicbold"
+            android:text="서울 6호선"
+            android:textSize="20dp"></Button>
 
-        <ImageButton
+        <Button
             android:id="@+id/stayline7"
-            android:layout_width="216dp"
-            android:layout_height="60dp"
+            android:layout_width="match_parent"
+            android:layout_height="0px"
+            android:layout_weight="1"
             android:layout_row="7"
             android:layout_column="1"
-            android:src="@drawable/lines7"></ImageButton>
+            android:background="#FFFFFF"
+            android:fontFamily="@font/nanumbarungothicbold"
+            android:text="서울 7호선"
+            android:textSize="20dp"></Button>
 
-        <ImageButton
+        <Button
             android:id="@+id/stayline8"
-            android:layout_width="216dp"
-            android:layout_height="60dp"
+            android:layout_width="match_parent"
+            android:layout_height="0px"
+            android:layout_weight="1"
             android:layout_row="8"
             android:layout_column="1"
-            android:src="@drawable/lines8"></ImageButton>
+            android:background="#FFFFFF"
+            android:fontFamily="@font/nanumbarungothicbold"
+            android:text="서울 8호선"
+            android:textSize="20dp"></Button>
 
-        <ImageButton
+        <Button
             android:id="@+id/stayline9"
-            android:layout_width="216dp"
-            android:layout_height="60dp"
+            android:layout_width="match_parent"
+            android:layout_height="0px"
+            android:layout_weight="1"
             android:layout_row="9"
             android:layout_column="1"
-            android:src="@drawable/lines9"></ImageButton>
+            android:background="#FFFFFF"
+            android:fontFamily="@font/nanumbarungothicbold"
+            android:text="서울 9호선"
+            android:textSize="20dp"></Button>
 
-        <ImageButton
+        <Button
             android:id="@+id/stayline10"
-            android:layout_width="216dp"
-            android:layout_height="60dp"
+            android:layout_width="match_parent"
+            android:layout_height="0px"
+            android:layout_weight="1"
             android:layout_row="10"
             android:layout_column="1"
-            android:src="@drawable/liness1"></ImageButton>
-    </GridLayout>
+            android:background="#FFFFFF"
+            android:fontFamily="@font/nanumbarungothicbold"
+            android:text="TEST"
+            android:textSize="20dp"></Button>
 
-    <ListView
-        android:id="@+id/popuplist"
-        android:layout_width="233dp"
-        android:layout_height="match_parent"
-        android:layout_row="0"
-        android:layout_column="1">
+    </LinearLayout>
+        <ListView
+            android:id="@+id/popuplist"
+            android:layout_width="0px"
+            android:layout_height="match_parent"
+            android:layout_weight="1.5"
+            android:layout_row="0"
+            android:layout_column="1">
 
-    </ListView>
-</GridLayout>
+        </ListView>
+</LinearLayout>
