--- a/app/src/main/res/layout/popup_items.xml
+++ b/app/src/main/res/layout/popup_items.xml
@@ -1,44 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:background="#eaeaea">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:gravity="center">
 
-    </RelativeLayout>
-    <TextView
-        android:id="@+id/itemss1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/nanumbarungothicbold"
-        android:gravity="center_horizontal"
-        android:textSize="25dp"
-        android:layout_marginRight="5dp"
-        android:textColor="#000000"></TextView>
-    <TextView
-        android:id="@+id/itemss2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/nanumbarungothicbold"
-        android:gravity="center_horizontal"
-        android:textSize="25dp"
-        android:textColor="#000000"></TextView>
-    <ImageView
-        android:id="@+id/itemss3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        ></ImageView>
-    <TextView
-        android:id="@+id/itemss4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/nanumbarungothicbold"
-        android:gravity="center_horizontal"
-        android:textSize="25dp"
-        android:textColor="#000000"></TextView>
+        <TextView
+            android:id="@+id/itemss1"
+            android:layout_width="0px"
+            android:layout_height="70dp"
+            android:layout_weight="1"
+            android:fontFamily="@font/nanumbarungothicbold"
+            android:gravity="center"
+            android:textSize="20dp"
+            android:textColor="#000000"></TextView>
+
+        <TextView
+            android:id="@+id/itemss2"
+            android:layout_width="0px"
+            android:layout_height="70dp"
+            android:layout_weight="1"
+            android:fontFamily="@font/nanumbarungothicbold"
+            android:gravity="center"
+            android:textSize="20dp"
+            android:textColor="#000000"></TextView>
+
+        <ImageView
+            android:id="@+id/itemss3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"></ImageView>
+
+        <TextView
+            android:id="@+id/itemss4"
+            android:layout_width="0px"
+            android:layout_height="70dp"
+            android:layout_weight="1"
+            android:fontFamily="@font/nanumbarungothicbold"
+            android:gravity="center"
+            android:textSize="20dp"
+            android:textColor="#000000"></TextView>
+
+    </LinearLayout>
+
 </LinearLayout>
