--- a/app/src/main/res/drawable/border_gray.xml
+++ b/app/src/main/res/drawable/border_gray.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item>
-        <shape android:shape="oval">
+        <shape android:shape="rectangle">
             <stroke android:width="1dp" android:color="#808080"/>
             <solid android:color="#FFFFFFFF"/>
         </shape>
